--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
   <header>
     <div class="flex-header-top">
       <div class="flex-menu">
-        <p class="item-1">logo</p>
-        <p>logo</p>
-        <p>logo</p>
-        <p>logo</p>
-        <p>logo</p>
-        <p class="item-2">logo</p>
+        
+        <div><img class="item-1" src="./img/logo.svg" alt="Logo Discord"></div>
+        <ul><p>logo</p>
+          <p>logo</p>
+          <p>logo</p>
+          <p>logo</p></ul>
+        <div> <button class="login-button"><p>Accedi</p></button></div>
       </div>
     </div>
     <div class="flex-header-bot">
@@ -72,4 +73,6 @@
         <p class="item">logo</p>
       </div>
   </footer>
+
+  
 </html>
