--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
       <div class="flex-menu">
         
         <div><img class="item-1" src="./img/logo.svg" alt="Logo Discord"></div>
-        <ul><p>logo</p>
-          <p>logo</p>
-          <p>logo</p>
-          <p>logo</p></ul>
+        <ul><p>Scarica</p>
+          <p>Perchè Discord</p>
+          <p>Nitro</p>
+          <p>Sicurezza</p>
+          <p>Assistenza</p></ul>
         <div> <button class="login-button"><p>Accedi</p></button></div>
       </div>
     </div>
     <div class="flex-header-bot">
+      
       <div class="flex-header-container"></div>
     </div>
   </header>
