--- a/index.html
+++ b/index.html
@@ -45,25 +45,51 @@
       <div class="flex-main-div1">
         <div class="flex-container1">
           <!---Blue div-->
-          <div class="bluediv"></div>
+          <div class="bluediv">
+            <img src="./img/item1.svg" alt="">
+          </div>
           <!---Pink div-->
-          <div class="pinkdiv"></div>
+          <div class="pinkdiv">
+            <h3>Un luogo a Invito con tutto lo spazio necessario per parlare</h3>
+            <p>i server discord sono organizzati in canali tematici 
+              in cui puoi collaborare, condividere o semplicemente
+               palrare della tua giornata senza intasare una chat i gruppo</p>
+          </div>
         </div>
       </div>
       <div class="flex-main-div2">
         <div class="flex-container1">
           <!---Blue div-->
-          <div class="bluedivspc"></div>
+          <div class="bluedivspc">
+            <h3>dove trovarsi è facile</h3>
+            <p>mettiti comodo in un canale vocale 
+              quando hai tempo. Gli amici del tuo 
+              server possono vedere che sei li e unirsi 
+              istantaneamente senza dover chiamare</p>
+          </div>
           <!---Pink div-->
-          <div class="pinkdivspc"></div>
+          <div class="pinkdivspc">
+            <img src="./img/item2.svg" alt="">
+          </div>
         </div>
       </div>
       <div class="flex-main-div1">
         <div class="flex-container1">
           <!---Blue div-->
-          <div class="bluediv"></div>
+          <div class="bluediv">
+            <img src="./img/item3.svg" alt="">
+            
+          </div>
           <!---Pink div-->
-          <div class="pinkdiv"></div>
+          <div class="pinkdiv">
+            <h3>Da pochi a un fandom</h3>
+            <p>Dai inizio ad una community di
+               qualsiasi dimensione con strumenti
+                di moderazione e accesso ai membri personalizzabile.
+                 Concedi ai membri poteri speciale, crea canali privati 
+                 e molto altro</p>
+            
+          </div>
         </div>
       </div>
       <div>
