--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
       </div>
       <div>
         <div class="flex-main-divbot">
-          <div class="flex-containerbot"></div>
+          <div class="flex-containerbot">
+              <h1>Tecnologia affidabile per tenersi in contatto</h1>
+              <p>Video e audio a bassa latenza vi faranno sentire come 
+                se foste tutti nella stessa stanza. Fai ciao in video,
+                 guarda gli amici giocare in streaming, o riunitevi in una 
+                sessione di disegno con la condivisione schermo</p>
+            <img class="containerimg" src="./img/item4-big.svg" alt="">
+          </div>
         </div>
       </div>
     </main>
