--- a/index.html
+++ b/index.html
@@ -95,12 +95,18 @@
       <div>
         <div class="flex-main-divbot">
           <div class="flex-containerbot">
+            <div class="divcontainerbot">
               <h1>Tecnologia affidabile per tenersi in contatto</h1>
               <p>Video e audio a bassa latenza vi faranno sentire come 
                 se foste tutti nella stessa stanza. Fai ciao in video,
                  guarda gli amici giocare in streaming, o riunitevi in una 
                 sessione di disegno con la condivisione schermo</p>
-            <img class="containerimg" src="./img/item4-big.svg" alt="">
+              </div>
+                <img class="containerimg" src="./img/item4-big.svg" alt="">
+                <div class="div-containerbottext">
+                  <h2>Pronto a iniziare la tua avventura?</h2>
+                </div>
+                <button class="download-macbot">↓ Scarica per Mac</button>
           </div>
         </div>
       </div>
