--- a/index.html
+++ b/index.html
@@ -115,17 +115,65 @@
   <footer>
     <div class="flex-footerbot">
       <div class="flex-containerfooter">
-        <div class="internaldiv1"></div>
-        <div class="internaldiv"></div>
-        <div class="internaldiv"></div>
-        <div class="internaldiv"></div>
-        <div class="internaldiv"></div>
+        <div class="internaldiv1">
+          <ul class="listabotbig">
+            <li class="listtilebig">Il tuo posto per Parlare</li>
+            <button class="languageselection">Italiano ⌵</button>
+          </ul>
+        </div>
+        <div class="internaldiv">
+          <ul class="listabot">
+            <li class="listtitle">Prodotto</li>
+            <li>Scarica</li>
+            <li>Perchè discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </div>
+        <div class="internaldiv">
+          <ul class="listabot">
+            <li class="listtitle">Compagnia</li>
+            <li>Chi siamo</li>
+            <li>Lavora con noi</li>
+            <li>Nitro</li>
+            <li>Marchio</li>
+            <li>Redazione</li>
+            <li>Negozio</li>
+          </ul>
+        </div>
+        <div class="internaldiv">
+          <ul class="listabot">
+            <li class="listtitle">Risorse</li>
+            <li>Scarica</li>
+            <li>Perchè discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+            <li>Scarica</li>
+            <li>Perchè discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </div>
+        <div class="internaldiv">
+          <ul class="listabot">
+            <li class="listtitle">Norme</li>
+            <li>Scarica</li>
+            <li>Perchè discord</li>
+            <li>Nitro</li>
+            <li>Sicurezza</li>
+            <li>Assistenza</li>
+          </ul>
+        </div>
       </div>
     </div>
+    <hr id="botline">
     <div class="flex-footer-bot">
       <div class="flex-footer-menu">
-        <p class="item">logo</p>
-        <p class="item">logo</p>
+        <p class="item"><img src="./img/logo.svg" alt="logo"></p>
+        <p class="item"> <button class="register-button"><p>Registrati</p></button></p>
       </div>
   </footer>
 
